--- a/src/App.scss
+++ b/src/App.scss
@@ -1,11 +1,8 @@
-.App{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
+.App{}
 
-.pokemon-card{
-display: flex;
-  flex-direction: column;
-  align-items: center;
+.radio-group{
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+  margin-bottom: 40px;
 }
