--- a/src/components/pokemonCard/pokemonCard.scss
+++ b/src/components/pokemonCard/pokemonCard.scss
@@ -1,1 +1,28 @@
-.pokemon-card{}
+.pokemon-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 150px;
+  height: 200px;
+  background: beige;
+  border-radius: 8px;
+  padding: 15px;
+  cursor: pointer;
+  transition: all .3s;
+  &:hover{
+    transform: scale(1.1);
+  }
+  .pokemon-avatar {
+    width: 110px;
+    height: 150px;
+    &__img {
+      max-width: 100%;
+      max-height: 100%;
+    }
+  }
+
+  .pokemon-name{
+    font-size: 22px;
+  }
+  .pokemon-type{}
+}
