--- a/src/components/inputs/field/field.scss
+++ b/src/components/inputs/field/field.scss
@@ -1,15 +1,19 @@
 .field {
   width: 100%;
   display: flex;
-
   &__input {
     width: inherit;
     min-height: 40px;
     outline: none;
     border-radius: 4px;
-    border: 1px solid lightgray;
+    border: 1px solid rgb(232, 209, 123);
     padding-left: 10px;
     padding-right: 20px;
+    transition: all .3s;
+    &:focus{
+      border: none;
+      box-shadow: 0px 0px 9px 2px rgba(232, 209, 123, 0.6);
+    }
   }
 
   &__label {
@@ -25,12 +29,16 @@
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
     outline: none;
-    background: #4f95f5;
+    background: #5CC1CF;
     transition: all .3s;
     margin-left: -10px;
 
     &:hover {
       background: #71a9f6;
+    }
+    &:disabled{
+      background: #5CC1CF;
+      opacity: 0;
     }
   }
 }
