--- a/src/components/pokemonCard/pokemonCard.scss
+++ b/src/components/pokemonCard/pokemonCard.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   width: 150px;
-  height: 200px;
+  height: 220px;
   background: beige;
   border-radius: 8px;
   padding: 15px;
@@ -14,7 +14,7 @@
   }
   .pokemon-avatar {
     width: 110px;
-    height: 150px;
+    height: 120px;
     &__img {
       max-width: 100%;
       max-height: 100%;
@@ -24,5 +24,10 @@
   .pokemon-name{
     font-size: 22px;
   }
-  .pokemon-type{}
+  .pokemon-type{
+    background: #5CC1CF;
+    padding: 2px 10px;
+    border-radius: 4px;
+    margin: 5px 0px;
+  }
 }
