--- a/src/components/pokemonCard/pokemonCard.scss
+++ b/src/components/pokemonCard/pokemonCard.scss
@@ -2,9 +2,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 150px;
-  height: 220px;
-  background: beige;
+  width: 170px;
+  height: 250px;
+  background: rgb(255, 255, 255);
+  background: linear-gradient(0deg, rgba(255, 255, 255, 0) 0%, rgba(249, 236, 198, 1) 39%, rgba(254, 237, 186, 0.6839110644257703) 100%);
   border-radius: 8px;
   padding: 15px;
   cursor: pointer;
