--- a/src/pages/pokemonPage/pokemonPage.scss
+++ b/src/pages/pokemonPage/pokemonPage.scss
@@ -3,9 +3,10 @@
     display: flex;
     gap: 20px;
     width: 100%;
-    box-shadow: 0px 0px 8px 5px rgba(230,230,230,1);
+    box-shadow: 0px 0px 8px 5px rgba(230, 230, 230, 1);
     padding: 20px;
     border-radius: 5px;
+    margin-bottom: 100px;
   }
 
   .pokemon-order {
@@ -37,10 +38,164 @@
     font-size: 18px;
     font-weight: 600;
   }
-  .pokemon-bio{
+
+  .pokemon-param {
+    flex-grow: 1;
+
+    .param-title {
+      display: block;
+      margin-bottom: 20px;
+    }
+
+    .pokemon-height, .pokemon-weight {
+      display: flex;
+      gap: 20px;
+
+      & span {
+        &:last-child {
+          font-weight: 600;
+        }
+      }
+    }
+
+    .pokemon-height {
+      margin-bottom: 20px;
+    }
+  }
+
+  .pokemon-evolution {
     flex-grow: 1;
   }
-  .pokemon-evolution{
-    flex-grow: 1;
+
+  .evolution-title {
+    display: block;
+    margin-bottom: 20px;
+  }
+
+  .evolution-items {
+    display: flex;
+    gap: 20px;
+  }
+
+  .evolution-item {
+    text-align: center;
+    transition: all .3s;
+    cursor: pointer;
+
+    &:hover {
+      transform: scale(1.1);
+    }
+
+    &__avatar {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      background: rgb(255, 255, 255);
+      background: linear-gradient(0deg, rgba(255, 255, 255, 0) 0%, rgba(198, 249, 219, 1) 75%, rgba(186, 254, 251, 0.6839110644257703) 100%);
+
+      & img {
+        max-width: 60px;
+      }
+    }
+
+    &__name {
+      font-size: 12px;
+    }
+
+  }
+
+  .go-to-main-btn {
+    padding: 15px 5px;
+    width: 140px;
+    text-align: center;
+    background: #a3f6c4;
+    border-radius: 8px;
+    margin: 0 auto;
+    transition: all .3s;
+    text-transform: uppercase;
+    font-size: 12px;
+    font-weight: 600;
+    color: #EE8200;
+
+    &:hover {
+      background: #78ce94;
+    }
   }
 }
+
+
+.pokemon-page--adapt-default {
+  @media (max-width: 960px) {
+    .pokemon-info {
+      flex-wrap: wrap;
+    }
+
+    .pokemon-avatar {
+      width: 100%;
+    }
+
+    .pokemon-evolution {
+     flex-grow: 0;
+    }
+
+    .go-to-main-btn{
+      margin-bottom: 100px;
+    }
+  }
+}
+
+.pokemon-page--adapt-default {
+  @media (max-width: 600px) {
+    .pokemon-info {
+      flex-direction: column;
+      align-items: center;
+      margin-bottom: 40px;
+    }
+
+    .pokemon-avatar {
+      width: 100%;
+    }
+
+    .pokemon-param {
+      flex-grow: 1;
+      margin-right: auto;
+      margin-bottom: 30px;
+      .param-title {
+        display: block;
+        margin-bottom: 20px;
+      }
+
+      .pokemon-height, .pokemon-weight {
+        display: flex;
+        gap: 20px;
+
+        & span {
+          &:last-child {
+            font-weight: 600;
+          }
+        }
+      }
+
+      .pokemon-height {
+        margin-bottom: 20px;
+      }
+    }
+
+    .pokemon-evolution {
+      flex-grow: 1;
+      margin-right: auto;
+      margin-bottom: 20px;
+      .evolution-item__avatar{
+        width: 70px;
+        height: 70px;
+        & img{
+          max-width: 40px;
+        }
+      }
+    }
+  }
+}
+
